src/antlr/MCFPPParser.ts
// Generated from ./antlr/MCFPP.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN.js";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer.js";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException.js";
import { NotNull } from "antlr4ts/Decorators.js";
import { NoViableAltException } from "antlr4ts/NoViableAltException.js";
import { Override } from "antlr4ts/Decorators.js";
import { Parser } from "antlr4ts/Parser.js";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext.js";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator.js";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener.js";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor.js";
import { RecognitionException } from "antlr4ts/RecognitionException.js";
import { RuleContext } from "antlr4ts/RuleContext.js";
//import { RuleVersion } from "antlr4ts/RuleVersion.js";
import { TerminalNode } from "antlr4ts/tree/TerminalNode.js";
import { Token } from "antlr4ts/Token.js";
import { TokenStream } from "antlr4ts/TokenStream.js";
import { Vocabulary } from "antlr4ts/Vocabulary.js";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl.js";

import * as Utils from "antlr4ts/misc/Utils.js";

import { MCFPPListener } from "./MCFPPListener.js";
import { MCFPPVisitor } from "./MCFPPVisitor.js";


export class MCFPPParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly OrgCommand = 36;
	public static readonly TargetSelector = 37;
	public static readonly THIS = 38;
	public static readonly SUPER = 39;
	public static readonly IF = 40;
	public static readonly ELSE = 41;
	public static readonly WHILE = 42;
	public static readonly FOR = 43;
	public static readonly DO = 44;
	public static readonly TRY = 45;
	public static readonly STORE = 46;
	public static readonly BREAK = 47;
	public static readonly CONTINUE = 48;
	public static readonly STATIC = 49;
	public static readonly EXTENDS = 50;
	public static readonly NATIVE = 51;
	public static readonly CONCRETE = 52;
	public static readonly FINAL = 53;
	public static readonly PUBLIC = 54;
	public static readonly PROTECTED = 55;
	public static readonly PRIVATE = 56;
	public static readonly InsideClass = 57;
	public static readonly INT = 58;
	public static readonly DECIMAL = 59;
	public static readonly VEC = 60;
	public static readonly WAVE = 61;
	public static readonly Identifier = 62;
	public static readonly ClassIdentifier = 63;
	public static readonly NORMALSTRING = 64;
	public static readonly STRING = 65;
	public static readonly WS = 66;
	public static readonly COMMENT = 67;
	public static readonly LINE_COMMENT = 68;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_namespaceDeclaration = 1;
	public static readonly RULE_typeDeclaration = 2;
	public static readonly RULE_classOrFunctionDeclaration = 3;
	public static readonly RULE_classDeclaration = 4;
	public static readonly RULE_classBody = 5;
	public static readonly RULE_staticClassMemberDeclaration = 6;
	public static readonly RULE_classMemberDeclaration = 7;
	public static readonly RULE_classMember = 8;
	public static readonly RULE_classFunctionDeclaration = 9;
	public static readonly RULE_functionDeclaration = 10;
	public static readonly RULE_namespaceID = 11;
	public static readonly RULE_nativeDeclaration = 12;
	public static readonly RULE_javaRefer = 13;
	public static readonly RULE_stringName = 14;
	public static readonly RULE_accessModifier = 15;
	public static readonly RULE_constructorDeclaration = 16;
	public static readonly RULE_nativeConstructorDeclaration = 17;
	public static readonly RULE_constructorCall = 18;
	public static readonly RULE_fieldDeclaration = 19;
	public static readonly RULE_parameterList = 20;
	public static readonly RULE_parameter = 21;
	public static readonly RULE_expression = 22;
	public static readonly RULE_statementExpression = 23;
	public static readonly RULE_conditionalExpression = 24;
	public static readonly RULE_conditionalOrExpression = 25;
	public static readonly RULE_conditionalAndExpression = 26;
	public static readonly RULE_equalityExpression = 27;
	public static readonly RULE_relationalExpression = 28;
	public static readonly RULE_relationalOp = 29;
	public static readonly RULE_additiveExpression = 30;
	public static readonly RULE_multiplicativeExpression = 31;
	public static readonly RULE_unaryExpression = 32;
	public static readonly RULE_basicExpression = 33;
	public static readonly RULE_castExpression = 34;
	public static readonly RULE_primary = 35;
	public static readonly RULE_varWithSelector = 36;
	public static readonly RULE_var = 37;
	public static readonly RULE_identifierSuffix = 38;
	public static readonly RULE_selector = 39;
	public static readonly RULE_arguments = 40;
	public static readonly RULE_functionBody = 41;
	public static readonly RULE_functionCall = 42;
	public static readonly RULE_statement = 43;
	public static readonly RULE_orgCommand = 44;
	public static readonly RULE_controlStatement = 45;
	public static readonly RULE_ifStatement = 46;
	public static readonly RULE_elseIfStatement = 47;
	public static readonly RULE_ifBlock = 48;
	public static readonly RULE_forStatement = 49;
	public static readonly RULE_forBlock = 50;
	public static readonly RULE_forControl = 51;
	public static readonly RULE_forInit = 52;
	public static readonly RULE_forUpdate = 53;
	public static readonly RULE_whileStatement = 54;
	public static readonly RULE_whileBlock = 55;
	public static readonly RULE_doWhileStatement = 56;
	public static readonly RULE_doWhileBlock = 57;
	public static readonly RULE_selfAddOrMinusStatement = 58;
	public static readonly RULE_tryStoreStatement = 59;
	public static readonly RULE_block = 60;
	public static readonly RULE_selfAddOrMinusExpression = 61;
	public static readonly RULE_expressionList = 62;
	public static readonly RULE_type = 63;
	public static readonly RULE_value = 64;
	public static readonly RULE_className = 65;
	public static readonly RULE_functionTag = 66;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "namespaceDeclaration", "typeDeclaration", "classOrFunctionDeclaration", 
		"classDeclaration", "classBody", "staticClassMemberDeclaration", "classMemberDeclaration", 
		"classMember", "classFunctionDeclaration", "functionDeclaration", "namespaceID", 
		"nativeDeclaration", "javaRefer", "stringName", "accessModifier", "constructorDeclaration", 
		"nativeConstructorDeclaration", "constructorCall", "fieldDeclaration", 
		"parameterList", "parameter", "expression", "statementExpression", "conditionalExpression", 
		"conditionalOrExpression", "conditionalAndExpression", "equalityExpression", 
		"relationalExpression", "relationalOp", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "basicExpression", "castExpression", "primary", "varWithSelector", 
		"var", "identifierSuffix", "selector", "arguments", "functionBody", "functionCall", 
		"statement", "orgCommand", "controlStatement", "ifStatement", "elseIfStatement", 
		"ifBlock", "forStatement", "forBlock", "forControl", "forInit", "forUpdate", 
		"whileStatement", "whileBlock", "doWhileStatement", "doWhileBlock", "selfAddOrMinusStatement", 
		"tryStoreStatement", "block", "selfAddOrMinusExpression", "expressionList", 
		"type", "value", "className", "functionTag",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'namespace'", "';'", "'class'", "'{'", "'}'", "'func'", "'('", 
		"')'", "':'", "'->'", "'.'", "'new'", "'='", "','", "'?'", "'||'", "'&&'", 
		"'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'!'", "'['", "']'", "'++'", "'--'", "'int'", "'bool'", undefined, 
		undefined, "'this'", "'super'", "'if'", "'else'", "'while'", "'for'", 
		"'do'", "'try'", "'store'", "'break'", "'continue'", "'static'", "'extends'", 
		"'native'", "'concrete'", "'final '", "'public'", "'protected'", "'private'", 
		undefined, undefined, undefined, "'vec'", "'~'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "OrgCommand", "TargetSelector", "THIS", "SUPER", "IF", "ELSE", 
		"WHILE", "FOR", "DO", "TRY", "STORE", "BREAK", "CONTINUE", "STATIC", "EXTENDS", 
		"NATIVE", "CONCRETE", "FINAL", "PUBLIC", "PROTECTED", "PRIVATE", "InsideClass", 
		"INT", "DECIMAL", "VEC", "WAVE", "Identifier", "ClassIdentifier", "NORMALSTRING", 
		"STRING", "WS", "COMMENT", "LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MCFPPParser._LITERAL_NAMES, MCFPPParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MCFPPParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "MCFPP.g4"; }

	// @Override
	public get ruleNames(): string[] { return MCFPPParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MCFPPParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MCFPPParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MCFPPParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MCFPPParser.T__0) {
				{
				this.state = 134;
				this.namespaceDeclaration();
				}
			}

			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MCFPPParser.T__2 || _la === MCFPPParser.T__5 || ((((_la - 49)) & ~0x1F) === 0 && ((1 << (_la - 49)) & ((1 << (MCFPPParser.STATIC - 49)) | (1 << (MCFPPParser.NATIVE - 49)) | (1 << (MCFPPParser.FINAL - 49)) | (1 << (MCFPPParser.PUBLIC - 49)) | (1 << (MCFPPParser.PROTECTED - 49)) | (1 << (MCFPPParser.PRIVATE - 49)) | (1 << (MCFPPParser.Identifier - 49)))) !== 0)) {
				{
				{
				this.state = 137;
				this.typeDeclaration();
				}
				}
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 143;
			this.match(MCFPPParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namespaceDeclaration(): NamespaceDeclarationContext {
		let _localctx: NamespaceDeclarationContext = new NamespaceDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MCFPPParser.RULE_namespaceDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.match(MCFPPParser.T__0);
			this.state = 146;
			this.match(MCFPPParser.Identifier);
			this.state = 147;
			this.match(MCFPPParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeDeclaration(): TypeDeclarationContext {
		let _localctx: TypeDeclarationContext = new TypeDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MCFPPParser.RULE_typeDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.classOrFunctionDeclaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classOrFunctionDeclaration(): ClassOrFunctionDeclarationContext {
		let _localctx: ClassOrFunctionDeclarationContext = new ClassOrFunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MCFPPParser.RULE_classOrFunctionDeclaration);
		try {
			this.state = 154;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MCFPPParser.T__2:
			case MCFPPParser.STATIC:
			case MCFPPParser.FINAL:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 151;
				this.classDeclaration();
				}
				break;
			case MCFPPParser.T__5:
			case MCFPPParser.Identifier:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 152;
				this.functionDeclaration();
				}
				break;
			case MCFPPParser.NATIVE:
			case MCFPPParser.PUBLIC:
			case MCFPPParser.PROTECTED:
			case MCFPPParser.PRIVATE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 153;
				this.nativeDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classDeclaration(): ClassDeclarationContext {
		let _localctx: ClassDeclarationContext = new ClassDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MCFPPParser.RULE_classDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MCFPPParser.STATIC) {
				{
				this.state = 156;
				this.match(MCFPPParser.STATIC);
				}
			}

			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MCFPPParser.FINAL) {
				{
				this.state = 159;
				this.match(MCFPPParser.FINAL);
				}
			}

			this.state = 162;
			this.match(MCFPPParser.T__2);
			this.state = 163;
			this.className();
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MCFPPParser.EXTENDS) {
				{
				this.state = 164;
				this.match(MCFPPParser.EXTENDS);
				this.state = 165;
				this.className();
				}
			}

			this.state = 168;
			this.classBody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classBody(): ClassBodyContext {
		let _localctx: ClassBodyContext = new ClassBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, MCFPPParser.RULE_classBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.match(MCFPPParser.T__3);
			this.state = 175;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MCFPPParser.T__5 || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (MCFPPParser.T__33 - 34)) | (1 << (MCFPPParser.T__34 - 34)) | (1 << (MCFPPParser.STATIC - 34)) | (1 << (MCFPPParser.NATIVE - 34)) | (1 << (MCFPPParser.PUBLIC - 34)) | (1 << (MCFPPParser.PROTECTED - 34)) | (1 << (MCFPPParser.PRIVATE - 34)) | (1 << (MCFPPParser.InsideClass - 34)) | (1 << (MCFPPParser.Identifier - 34)) | (1 << (MCFPPParser.ClassIdentifier - 34)))) !== 0)) {
				{
				this.state = 173;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
				case 1:
					{
					this.state = 171;
					this.classMemberDeclaration();
					}
					break;

				case 2:
					{
					this.state = 172;
					this.staticClassMemberDeclaration();
					}
					break;
				}
				}
				this.state = 177;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 178;
			this.match(MCFPPParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public staticClassMemberDeclaration(): StaticClassMemberDeclarationContext {
		let _localctx: StaticClassMemberDeclarationContext = new StaticClassMemberDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, MCFPPParser.RULE_staticClassMemberDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 54)) & ~0x1F) === 0 && ((1 << (_la - 54)) & ((1 << (MCFPPParser.PUBLIC - 54)) | (1 << (MCFPPParser.PROTECTED - 54)) | (1 << (MCFPPParser.PRIVATE - 54)))) !== 0)) {
				{
				this.state = 180;
				this.accessModifier();
				}
			}

			this.state = 183;
			this.match(MCFPPParser.STATIC);
			this.state = 184;
			this.classMember();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classMemberDeclaration(): ClassMemberDeclarationContext {
		let _localctx: ClassMemberDeclarationContext = new ClassMemberDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, MCFPPParser.RULE_classMemberDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 186;
				this.accessModifier();
				}
				break;
			}
			this.state = 189;
			this.classMember();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classMember(): ClassMemberContext {
		let _localctx: ClassMemberContext = new ClassMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, MCFPPParser.RULE_classMember);
		try {
			this.state = 198;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 191;
				this.classFunctionDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 192;
				this.fieldDeclaration();
				this.state = 193;
				this.match(MCFPPParser.T__1);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 195;
				this.constructorDeclaration();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 196;
				this.nativeDeclaration();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 197;
				this.nativeConstructorDeclaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classFunctionDeclaration(): ClassFunctionDeclarationContext {
		let _localctx: ClassFunctionDeclarationContext = new ClassFunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, MCFPPParser.RULE_classFunctionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(MCFPPParser.T__5);
			this.state = 201;
			this.match(MCFPPParser.Identifier);
			this.state = 202;
			this.match(MCFPPParser.T__6);
			this.state = 204;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (MCFPPParser.T__33 - 34)) | (1 << (MCFPPParser.T__34 - 34)) | (1 << (MCFPPParser.STATIC - 34)) | (1 << (MCFPPParser.CONCRETE - 34)) | (1 << (MCFPPParser.InsideClass - 34)) | (1 << (MCFPPParser.Identifier - 34)) | (1 << (MCFPPParser.ClassIdentifier - 34)))) !== 0)) {
				{
				this.state = 203;
				this.parameterList();
				}
			}

			this.state = 206;
			this.match(MCFPPParser.T__7);
			this.state = 207;
			this.match(MCFPPParser.T__3);
			this.state = 208;
			this.functionBody();
			this.state = 209;
			this.match(MCFPPParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, MCFPPParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 212;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MCFPPParser.Identifier) {
				{
				this.state = 211;
				this.functionTag();
				}
			}

			this.state = 214;
			this.match(MCFPPParser.T__5);
			this.state = 215;
			this.namespaceID();
			this.state = 216;
			this.match(MCFPPParser.T__6);
			this.state = 218;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (MCFPPParser.T__33 - 34)) | (1 << (MCFPPParser.T__34 - 34)) | (1 << (MCFPPParser.STATIC - 34)) | (1 << (MCFPPParser.CONCRETE - 34)) | (1 << (MCFPPParser.InsideClass - 34)) | (1 << (MCFPPParser.Identifier - 34)) | (1 << (MCFPPParser.ClassIdentifier - 34)))) !== 0)) {
				{
				this.state = 217;
				this.parameterList();
				}
			}
